--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,9 +62,25 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/Interfaz/HUDBottom1.png
+    - assets/Interfaz/HUDBottom1ALT.png
+    - assets/Interfaz/HUDBottom2.png
+    - assets/Interfaz/HUDBottom2ALT.png
+    - assets/Interfaz/HUDBottom3.png
+    - assets/Interfaz/HUDBottom3ALT.png
+    - assets/Interfaz/HUDNotch.png
+    - assets/Interfaz/HUDTop.png
+    - assets/Logo.png
+    - assets/Iconos/PHSteps.png
+    - assets/Iconos/PHCoin.png
+    - assets/Equipamiento/PHSword.png
+    - assets/Equipamiento/PHBook.png
+    - assets/Equipamiento/PHChestplate.png
+    - assets/Equipamiento/PHGreaves.png
+    - assets/Equipamiento/PHHelmet.png
+    - assets/Equipamiento/PHShield.png
+    - assets/Enemigos/ENEMYGoblinDude.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
@@ -77,17 +93,23 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: Jersey10
+      fonts:
+        - asset: assets/fonts/Jersey_10/Jersey10-Regular.ttf
+    - family: Micro5
+      fonts:
+        - asset: assets/fonts/Micro_5/Micro5-Regular.ttf
+  #  - family: Schyler
+  #    fonts:
+  #      - asset: fonts/Schyler-Regular.ttf
+  #      - asset: fonts/Schyler-Italic.ttf
+  #        style: italic
+  #  - family: Trajan Pro
+  #    fonts:
+  #      - asset: fonts/TrajanPro.ttf
+  #      - asset: fonts/TrajanPro_Bold.ttf
+  #        weight: 700
+  
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
